--- a/bulletin/templates/bulletins/imprime1.html
+++ b/bulletin/templates/bulletins/imprime1.html
@@ -57,6 +57,7 @@
   </style>
 {% endblock %}
 
+
 {% block contenu %}
   <div class="content-wrapper">
     <section class="content">
@@ -159,7 +160,7 @@
       </div>
     </section>
   </div>
-{% endblock %
+{% endblock %}
 
 {% block scripte %}
   <script src="{% static 'base/plugins/jquery/jquery.min.js' %}"></script>
