--- a/bulletin/templates/bulletins/resultat_annuel.html
+++ b/bulletin/templates/bulletins/resultat_annuel.html
@@ -41,6 +41,7 @@
                   </select>
                 </div>
                 <button type="submit" class="btn btn-primary mb-2">Rechercher</button>
+                <div style="display:inline-block; width: 10px;"></div> <!-- Ajout de l'espace ici -->
                 <button type="button" onclick="imprimer()" class="btn btn-secondary mb-2">Imprimer</button>
               </form>
             </div>
@@ -84,7 +85,17 @@
                   <tbody>
                     {% for bulletin in sorted_bulletins %}
                       <tr>
-                        <td>{{ bulletin.rang }}</td>
+                        <td>
+                          {% if bulletin.rang == 1 %}
+                            1er
+                          {% elif bulletin.rang == 2 %}
+                            2ème
+                          {% elif bulletin.rang == 3 %}
+                            3ème
+                          {% else %}
+                            {{ bulletin.rang }}ème
+                          {% endif %}
+                        </td>
                         <td>{{ bulletin.bulletin.eleve.nom }} {{ bulletin.bulletin.eleve.prenom }}</td>
                         <td>{{ bulletin.moyenne_annuelle|floatformat:2 }}</td>
                         <td>{{ bulletin.observation }}</td>
