--- a/enseignant/templates/enseignant/enseignant.html
+++ b/enseignant/templates/enseignant/enseignant.html
@@ -1,84 +1,70 @@
 {% extends "Base/index.html" %}
 {% load static %}
- {% block styl_parent %}
-  <title>patient | Accueil</title>
 
-
-  <!-- Google Font: Source Sans Pro -->
+{% block styl_parent %}
+  <title>Détail de l'enseignant | {{ enseignant.nom }} {{ enseignant.prenom }}</title>
+  
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
-  <!-- Font Awesome -->
   <link rel="stylesheet" href="{% static 'base/plugins/fontawesome-free/css/all.min.css' %}">
-  <!-- DataTables -->
-  <link rel="stylesheet" href="{% static 'base/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css' %}">
-  <link rel="stylesheet" href="{% static 'base/plugins/datatables-responsive/css/responsive.bootstrap4.min.css' %}">
-  <link rel="stylesheet" href="{% static 'base/plugins/datatables-buttons/css/buttons.bootstrap4.min.css' %}">
-  <!-- Theme style -->
+  <link rel="stylesheet" href="{% static 'base/plugins/bootstrap/css/bootstrap.min.css' %}">
   <link rel="stylesheet" href="{% static 'base/css/adminlte.min.css' %}">
+  <link rel="stylesheet" href="{% static 'base/css/custom.css' %}">
 {% endblock %}
-
-
-
- {% block body %}
-<body class="hold-transition sidebar-mini">
- {% endblock body %}
 
 {% block contenu %}
-  <!-- Content Wrapper. Contains page content -->
-  <div class="content-wrapper">
-    <!-- Content Header (Page header) -->
-    
-
-
-
-
-
-
-
-
-
-
+<div class="content-wrapper">
+  <div class="content-header">
+    <h1 class="bg-primary text-center">INFORMATIONS COMPLÈTES DE L'ENSEIGNANT</h1>
   </div>
-  <!-- /.content-wrapper -->
+
+  <div class="content-body">
+    <div class="container">
+      <div class="row">
+        <!-- Photo Section -->
+        <div class="col-md-4">
+          <div class="card card-secondary">
+            <div class="card-header">
+              <h3 class="card-title">Photo</h3>
+            </div>
+            <div class="card-body text-center">
+              {% if enseignant.photo %}
+                <img src="{{ enseignant.photo.url }}" alt="Photo de {{ enseignant.nom }} {{ enseignant.prenom }}" class="img-fluid">
+              {% else %}
+                <p>Aucune photo disponible.</p>
+              {% endif %}
+            </div>
+          </div>
+        </div>
+
+        <!-- Teacher Info Section -->
+        <div class="col-md-8">
+          <div class="card card-primary">
+            <div class="card-header">
+              <h3 class="card-title">Informations de l'enseignant</h3>
+            </div>
+            <div class="card-body">
+              <p><strong>Nom :</strong> {{ enseignant.nom }}</p>
+              <p><strong>Prénom :</strong> {{ enseignant.prenom }}</p>
+              <p><strong>Téléphone :</strong> {{ enseignant.telephone }}</p>
+              <p><strong>Sexe :</strong> {{ enseignant.Sexe }}</p>
+              <p><strong>Date de naissance :</strong> {{ enseignant.date_naiss }}</p>
+              <p><strong>Lieu de naissance :</strong> {{ enseignant.lieu_naiss }}</p>
+              <p><strong>Adresse :</strong> {{ enseignant.adresse }}</p>
+              <p><strong>Spécialité :</strong> {{ enseignant.specialite }}</p>
+              <p><strong>Email :</strong> {{ enseignant.email }}</p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
-  
+
 {% block scripte %}
-<!-- jQuery -->
 <script src="{% static 'base/plugins/jquery/jquery.min.js' %}"></script>
-<!-- Bootstrap 4 -->
 <script src="{% static 'base/plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-<!-- DataTables  & Plugins -->
-<script src="{% static 'base/plugins/datatables/jquery.dataTables.min.js' %}"></script>
-<script src="{% static 'base/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js' %}"></script>
-<script src="{% static 'base/plugins/datatables-responsive/js/dataTables.responsive.min.js' %}"></script>
-<script src="{% static 'base/plugins/datatables-responsive/js/responsive.bootstrap4.min.js' %}"></script>
-<script src="{% static 'base/plugins/datatables-buttons/js/dataTables.buttons.min.js' %}"></script>
-<script src="{% static 'base/plugins/datatables-buttons/js/buttons.bootstrap4.min.js' %}"></script>
-<script src="{% static 'base/plugins/jszip/jszip.min.js' %}"></script>
-<script src="{% static 'base/plugins/pdfmake/pdfmake.min.js' %}"></script>
-<script src="{% static 'base/plugins/pdfmake/vfs_fonts.js' %}"></script>
-<script src="{% static 'base/plugins/datatables-buttons/js/buttons.html5.min.js' %}"></script>
-<script src="{% static 'base/plugins/datatables-buttons/js/buttons.print.min.js' %}"></script>
-<script src="{% static 'base/plugins/datatables-buttons/js/buttons.colVis.min.js' %}"></script>
-<!-- AdminLTE App -->
 <script src="{% static 'base/js/adminlte.min.js' %}"></script>
-<!-- AdminLTE for demo purposes -->
-<script src="{% static 'base/js/demo.js' %}"></script>
-<!-- Page specific script -->
-<script>
-  $(function () {
-    $("#example1").DataTable({
-      "responsive": true, "lengthChange": false, "autoWidth": false,
-      "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
-    }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
-    $('#example2').DataTable({
-      "paging": true,
-      "lengthChange": false,
-      "searching": false,
-      "ordering": true,
-      "info": true,
-      "autoWidth": false,
-      "responsive": true,
-    });
-  });
-</script>
+<script src="{% static 'base/js/custom.js' %}"></script>
 {% endblock %}
